2011-07-25  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_DECOLONIZE): even when $ac_cv_build is mingw, use
	cygpath when available because cross-compiling on cygwin is not detected

2011-07-20  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): add close, ioctl, and make stdlib
	inclusion explicit (it has always been present as a dependency)
	* modules/rawsock/rawsock.c, socket.d, stream.d, unix.d, win32.d:
	use close() instead of closesocket() and ioctl() instead of
	ioctlsocket() on all platforms

2011-07-20  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (RMRF, HG): new variables
	(gnulib-imported): remove gnulib directories before import to see
	added and deleted files right away

2011-07-20  Sam Steingold  <sds@gnu.org>

	* makemake.in: pass "--execute netrc=off" to wget to avoid
	"unknown token" errors

2011-07-20  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): add sys_select

2011-07-19  Sam Steingold  <sds@gnu.org>

	* configure.in: do not call gt_LC_MESSAGES
	* spvw_ctype.d, spvw_language.d: assume LC_MESSAGES is present
	* win32.d: do not define HAVE_LC_MESSAGES

2011-07-19  Sam Steingold  <sds@gnu.org>

	* bdb.c, clx.f, dirkey.c, gdbm.c, cpcre.c, rawsock.c, calls.c:
	* aridecl.d, array.d, charstrg.d, control.d, debug.d, encoding.d:
	* error.d, errunix.d, errwin32.d, eval.d, flo_konv.d, foreign.d:
	* funarg.d, genclisph.d, intbyte.d, intdiv.d, intelem.d, intmal.d:
	* io.d, lfloat.d, lisparit.d, lispbibl.d, makemake.in, pathname.d:
	* record.d, sequence.d, spvw.d, spvw_allocate.d, stream.d, symbol.d:
	* unix.d, win32.d, win32aux.d: gnulib module stdlib prodvides
	macro _Noreturn; use it instead of nonreturning_function()

2011-07-19  Sam Steingold  <sds@gnu.org>

	use gnulib modules to convert windows WSAGetLastError to errno
	* Makefile.devel (GNULIB_CORE): add bind accept listen recv send
	setsockopt shutdown connect socket setsockopt getsockname getpeername
	replace strerror with strerror_r-posix