@@ -1,0 +1,5 @@
+#undef close
+#undef listen
+#undef read
+#undef sleep
+#undef write
